--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "Title": "Radiosity",
   "WindowSize": "1600x900",
   "InputFile": "Scenes/CornellBox/scene.vsgf",
-  "DataDir": "Scenes/DualCornellBox",
-  "LoD": 1,
-  "ScenePropertiesFile": "Scenes/DualCornellBox/statex_00007.xml",
+  "DataDir": "Scenes/CornellBox2",
+  "LoD": 3,
+  "ScenePropertiesFile": "Scenes/CornellBox2/statex_00001.xml",
   "RecomputeFormFactors": 0,
   "MaxPatchesCount": 110000
 }
