Move max hierarchy depth to parameter.

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
   "LoD": 3,
   "ScenePropertiesFile": "Scenes/CornellBox2/statex_00001.xml",
   "RecomputeFormFactors": 0,
-  "MaxPatchesCount": 110000
+  "MaxPatchesCount": 110000,
+  "MaxHierarchyDepth": 5
 }
