Compute radiosity with flat tessellation.

--- a/config.json
+++ b/config.json
@@ -8,5 +8,6 @@
   "ScenePropertiesFile": "Scenes/CornellBox2/statex_00001.xml",
   "RecomputeFormFactors": 0,
   "MaxPatchesCount": 110000,
-  "MaxHierarchyDepth": 11
+  "MaxHierarchyDepth": 15,
+  "FormFactorsDir": "Multibounce flat FF"
 }
