--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "GLVersion": "4.0",
   "Title": "Radiosity",
   "WindowSize": "1024x1024",
-  "InputFile": "Scenes/CornellBox/scene.vsgf",
-  "DataDir": "Scenes/CornellBox2",
+  "InputFile": "Scenes/house_scenelib/scene.vsgf",
+  "DataDir": "Scenes/house_scenelib",
   "LoD": 3,
-  "ScenePropertiesFile": "Scenes/CornellBox2/statex_00001.xml",
-  "RecomputeFormFactors": 0,
+  "ScenePropertiesFile": "Scenes/house_scenelib/statex_00001.xml",
+  "RecomputeFormFactors": 1,
   "MaxPatchesCount": 110000,
-  "MaxHierarchyDepth": 15,
+  "MaxHierarchyDepth": 1,
   "FormFactorsDir": "Multibounce flat FF",
   "Bounces": 5
 }
