Good ref approximation.

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "GLVersion": "4.0",
   "Title": "Radiosity",
-  "WindowSize": "1600x900",
-  "InputFile": "Scenes/house_scenelib/scene.vsgf",
-  "DataDir": "Scenes/house_scenelib",
+  "WindowSize": "1024x1024",
+  "InputFile": "Scenes/house_v1/scenelib/scene.vsgf",
+  "DataDir": "Scenes/house_v1/scenelib",
   "LoD": 3,
-  "ScenePropertiesFile": "Scenes/house_scenelib/statex_00001.xml",
+  "ScenePropertiesFile": "Scenes/house_v1/scenelib/statex_00002.xml",
   "RecomputeFormFactors": 0,
   "MaxPatchesCount": 110000,
   "MaxHierarchyDepth": 1,
